@@ -1,6 +1,7 @@
 Changes in NEXT
 ===============
 	* killall: Check truncated names !28
+	* killall: Use openat and pidfd_send_signal #37
         * pstree: Check for process with show_parents #38
 	* pstree: Don't disable compaction with show pgids #34
 	* pstree: Fix storage leak !29
